--- a/admin-data.html
+++ b/admin-data.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -263,7 +262,7 @@
 
             <form id="data-form">
                 <div class="form-grid">
-                    <!-- UPDATED: Manual Date Input -->
+                    <!-- Manual Date Input -->
                     <div class="form-group full-width">
                         <label>Date (DD/MM/YYYY)</label>
                         <input type="text" class="form-input" id="inp-date" placeholder="25/12/2025" pattern="\d{2}/\d{2}/\d{4}" title="Format: DD/MM/YYYY" required>
@@ -285,13 +284,19 @@
                         <input type="number" class="form-input" id="inp-deaths" placeholder="0" required>
                     </div>
 
+                    <!-- ADDED: Recovered Input -->
+                    <div class="form-group">
+                        <label>Recovered</label>
+                        <input type="number" class="form-input" id="inp-recovered" placeholder="0" required>
+                    </div>
+
                     <div class="form-group">
                         <label>Mild</label>
                         <input type="number" class="form-input" id="inp-mild" placeholder="0" required>
                     </div>
 
                     <div class="form-group">
-                        <label>Critical</label>
+                        <label>Serious</label>
                         <input type="number" class="form-input" id="inp-serious" placeholder="0" required>
                     </div>
                 </div>
@@ -314,7 +319,6 @@
             <div class="table-scroll">
                 <table>
                     <thead>
-                        <!-- UPDATED COLUMN ORDER -->
                         <tr>
                             <th>Date</th>
                             <th>Country</th>
@@ -381,7 +385,6 @@
                     const id = docSnap.id;
                     const tr = document.createElement('tr');
                     
-                    // UPDATED: Order to match Date - Country - Cases - Deaths - Recovered - Mild - Serious
                     tr.innerHTML = `
                         <td>${data.Date}</td>
                         <td>${data.Country}</td>
@@ -409,11 +412,13 @@
                 // Get the raw string directly (DD/MM/YYYY)
                 const dateString = document.getElementById('inp-date').value;
 
+                // UPDATED: Added Recovered to data object
                 const newData = {
                     Date: dateString,
                     Country: document.getElementById('inp-country').value, 
                     Cases: Number(document.getElementById('inp-cases').value),
                     Deaths: Number(document.getElementById('inp-deaths').value),
+                    Recovered: Number(document.getElementById('inp-recovered').value),
                     Mild: Number(document.getElementById('inp-mild').value),
                     Serious: Number(document.getElementById('inp-serious').value),
                     createdAt: serverTimestamp()
@@ -453,3 +458,4 @@
     </script>
 </body>
 </html>
+
